# websocket-c

./: README.md  meson.build  meson_options.txt
examples/: client.c  meson.build  server.c
websocket-c/: client.c  client.h  meson.build  server.c  server.h  websocket.c  websocket.h
